# resona

./: Cargo.toml  README.md
benches/: sona.rs
src/: lib.rs  main.rs
src/utils/: err.rs  generate_name.rs  mod.rs  normalize.rs  pad.rs  pattern.rs  phonemes.rs  weighted_pick.rs
