[package]
name = "resona"
version = "0.0.2"
edition = "2024"
license = "MIT"
description = "A Rust implementation of `sonare`: pronounceable and organic words that feel natural"

[dependencies]
nanorand = "0.8.0"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "sona"
harness = false
